# ftx-1

./: .gitignore  main.py
fix/: client.py
ftxgo/: go.mod  go.sum  main.go
ftxgo/ftx/: main.go
ftxgo/ftx/ftx/: account.go  markets.go  orders.go  rest.go  subaccounts.go
ftxwebsocket/: client.py  websocket_manager.py
rest/: client.py  otc_client.py
rust/: Cargo.toml
rust/examples/: websocket-test.rs
rust/src/: @SABERLOVEWH_user_tweets.xlsx  main.rs
